Update analyst name in Project6_Titanic.ipynb

--- a/Project6_Titanic.ipynb
+++ b/Project6_Titanic.ipynb
@@ -13,7 +13,7 @@
    "id": "20691502-e2ae-4f15-b9b6-caec58eaf34a",
    "metadata": {},
    "source": [
-    "<h2>Analyst: Alanis Danica P. Concha</h2>\n",
+    "<h2>Analyst: Zairesh Castillo</h2>\n",
     "<h2>BSIT-3C</h2>"
    ]
   },
